<resources>
    <string name="app_name">Sober</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">No account? Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Name</string>
    <string name="login">login</string>
    <string name="or">---Or---</string>
    <string name="sign_in_with">Sign In with</string>
    <string name="have_an_account_already_login">Have an account Already? Login</string>
    <string name="profile">Profile</string>
    <string name="progress">Progress</string>
    <string name="pledges">pledges</string>
    <string name="community">Community</string>
    <string name="day_list">Day List</string>
    <string name="calendar">Calendar</string>
    <string name="notes">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
</resources>