<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/sober_background"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:hint="@string/username"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTextInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_black"
                android:textSize="@dimen/button_text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTextInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_black"
                android:textSize="@dimen/button_text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_size"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_black"
                android:textSize="@dimen/button_text" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_marginHorizontal="26dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/action_sign_in_short"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/button_text" />

        <com.example.sober.textFonts
            android:id="@+id/alreadyHaveAnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account_already_login"
            app:typeface="Montserrat-SemiBold.ttf"
            android:textSize="@dimen/button_text"
            android:gravity="center"
            android:clickable="true"
            android:layout_marginTop ="26dp"
            android:textColor="@color/purple_500"
            android:focusable="true" />

    </LinearLayout>

</RelativeLayout>